20150302 bzip2.c,crypto.c,csw.c,dck.c,ide.c,libspectrum.c,microdrive.c,plusd.c,
         pzx_read.c,rzx.c,sna.c,snapshot.c,sp.c,szx.c,tap.c,test/test.c,
         tzx_read.c,tzx_write.c,warajevo_read.c,wav.c,z80.c,z80em.c,zlib.c,
         zxs.c: use libspectrum_{new,new0,renew}() macros where
         sizeof(elem) == 1 (Stuart).
20150302 memory.c: check for overflow in libspectrum_calloc() (Stuart).
20150302 libspectrum.h.in,memory.c: add libspectrum_{m,re}alloc_n() and use this
         for libspectrum_{new,renew}() macros (Stuart).
20150302 libspectrum.h.in,memory.c: rename libspectrum_calloc() to
         libspectrum_malloc0_n() (Stuart).
20150315 README,configure.ac: remove automatic fallback to GLib replacement (now
         --with-fake-glib) (Stuart).
20150315 make-perl.c: add LIBSPECTRUM_HAS_GLIB_REPLACEMENT macro (Stuart).
20150316 configure.ac: always use -Wwrite-strings when using GCC (Stuart).
20150316 zlib.c,zxs.c: define ZLIB_CONST when including <zlib.h> and remove cast
         used as workaround for discarding of const (Stuart).
20150316 pzx_read.c: add missing const qualifiers and remove casts (Stuart).
20150316 generate.pl.in,libspectrum.h.in: remove autogeneration warning from
         libspectrum.h.in (Stuart).
20150316 doc/libspectrum.txt: add missing line break (Stuart).
20150316 snapshot.c: store PC-1 for all snapshot formats whilst in the halted
         state (Stuart).
20150318 crypto.c,csw.c,internals.h,libspectrum.c,pzx_read.c,rzx.c,szx.c,
         tzx_read.c: const and static cleanups (Stuart).
20150418 internals.h: fix compilation on systems without stdint.h (Stuart).
20150506 libspectrum.h.in: add missing compatibility comments (Stuart).
20150507 libspectrum.{c,h.in}: add Didaktik disk class and image format (part of
         patch #331) (Gergely Szasz).
20150510 Makefile.am,m4/pkg.m4: add pkg.m4 for PKG_CHECK_MODULES in case the
         platform doesn't have pkg-config installed (Sergio).